--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+
+.App{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 28px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-box{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  text-align: center;
+  height: 10%;
+  margin-top: 8%;
+}
+.input-bar{
+  border: 1px solid black;
+  border-radius: 10px;
+  height: 20px;
+  min-width: 40%;
+  padding: 3px 10px;
+  margin: 5px;
+  margin-top: none;
+}
+.search-box>input.button{
+  box-sizing: border-box;
+  height: 25px;
+  width: 20px;
+}
+
+.button{
+  border: 1px solid rgb(21, 21, 21);
+  border-radius: 8px;
+  padding: 5px 8px;
+  margin: 2px;
+  background-color:rgb(3, 3, 3);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
